# umap_cv

./: .gitignore  LICENSE  README.md  config.toml.template  index.html  pyproject.toml  requirements.txt  semantic_search_frontend.html  semantic_search_pipeline.py  semantic_search_server.py  test.py
.github/workflows/: deploy.yml
_poc/: DIMENSIONALITY_REDUCTION_GUIDE.md  index.html  semantic_search_improvements.md  visualize_reductions.py
articles/: generate_projects.py
latent_portfolio/: __init__.py  _blender_visualizer.py  build.py  load.py  process.py  serve.py  shapes.py  utils.py
latent_portfolio/articles/: 000_python_blender_automation.md  003_python_cv_toolkit.md  004_js_react_dashboard.md  007_rust_blockchain.md  009_blender_nature_doc.md  017_traditional_stopmotion.md
sample_articles/: 008_go_distributed_cache.md  011_blender_arch_viz.md  012_blender_character_animation.md  013_ae_motion_graphics.md  _article_boilerplate.md
udim_cv/: _blender_visualizer.py  build.py  config.toml  embed.py  load.py  process.py  serve.py  server.py  utils.py
udim_cv/articles/: 000_python_blender_automation.md  001_python_web_scraper.md  002_python_trading_bot.md  003_python_cv_toolkit.md  004_js_react_dashboard.md  005_js_node_backend.md  006_cpp_physics_sim.md  007_rust_blockchain.md  008_go_distributed_cache.md  009_blender_nature_doc.md  010_blender_product_viz.md  011_blender_arch_viz.md  012_blender_character_animation.md  013_ae_motion_graphics.md  014_ae_vfx_composite.md  015_ae_infographics.md  016_traditional_watercolor.md  017_traditional_stopmotion.md  (+1 more)
(+61 files in other folders)
